--- a/mixable.html
+++ b/mixable.html
@@ -249,7 +249,7 @@
 									<line x1="12" y1="8" x2="12" y2="12"></line>
 									<line x1="12" y1="16" x2="12.01" y2="16"></line>
 								</svg>
-								<b><span id="swapped_count">0</span> of <span id="total_count">0</span> outputs (<span id="swapped_percent">0%</span>) are under 1,000.00 TRTL.</b>
+								<b><span id="swapped_count">0</span> of <span id="total_count">0</span> outputs (<span id="swapped_percent">0%</span>) are under 1,000.00 MON.</b>
 							</div>
 							<div class="table-responsive">
 								<table id="mixableAmounts" class="table table-vcenter text-nowrap card-table">
